tests/ui/consts/required-consts/collect-in-promoted-const.opt.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/collect-in-promoted-const.rs:11:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation of `Fail::<T>::C` failed here

note: erroneous constant encountered
  --> $DIR/collect-in-promoted-const.rs:22:21
   |
LL |         let _val = &Fail::<T>::C;
   |                     ^^^^^^^^^^^^

error[E0080]: evaluation panicked: explicit panic
  --> $DIR/collect-in-promoted-const.rs:11:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation of `Fail::<i32>::C` failed here

note: erroneous constant encountered
  --> $DIR/collect-in-promoted-const.rs:22:21
   |
LL |         let _val = &Fail::<T>::C;
   |                     ^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: the above error was encountered while instantiating `fn f::<i32>`
  --> $DIR/collect-in-promoted-const.rs:27:5
   |
LL |     f::<i32>();
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
